# rdprotos

./: .gitignore  Cargo.toml  README.md  buf.gen.yaml  buf.yaml  build.rs  gateway.gen.yaml  gen_protos_for_vscode.sh  go.mod  grpcui.sh  helloworld.proto
grpc-gateway/: Dockerfile  go.mod  go.sum
grpc-gateway/server/: main.go
proto/echochamber/helloworld/v1/: greeter.proto
src/: lib.rs
