[package]
name = "echochamber-rdproto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = { version = "0.11", features = ["prost-derive"] }
# Only necessary if using Protobuf well-known types:
prost-types = "0.11"
tonic = { version = "^0.9", optional = true }
serde = "1.0.160"
pbjson = "0.5.1"
pbjson-types = "0.5.1"